--- a/Tech-gun/JsDay8/appendchild.html
+++ b/Tech-gun/JsDay8/appendchild.html
@@ -41,10 +41,9 @@
  newElm.textContent ="hello text Content"
  
 /*  
-                 output : Hello this is p tag
+                     output : Hello this is p tag
 
-                          hello this text from createTextNode
-
+                          hello this text content
 */
  
 // innerText =>
