--- a/Tech-gun/JsDay8/byClassName.html
+++ b/Tech-gun/JsDay8/byClassName.html
@@ -27,7 +27,7 @@
   console.log(elm.length); // output : 3
 // accessing the each list =>
 for(let i=0; elm.length; i++){
-    elm[i].innerHTML =" hello this is new text";
+    elm[i].innerHTML ="<h1> hello this is new text<\h1>";
 }
 
 /* 
