--- a/Tech-gun/JsDay9/insertAdjestHTML.html
+++ b/Tech-gun/JsDay9/insertAdjestHTML.html
@@ -42,12 +42,12 @@ This is a heading 2 by default
  */
 
 
- // beforebegin => 
+ 
 
  
 
- newHtml = "<h1>Hey i am afetbegin</h1>"
- target.insertAdjacentHTML("beforebegin" , newHtml);
+ newHtml = "<h1>Hey i am afterbegin</h1>"
+ target.insertAdjacentHTML("afterbegin" , newHtml);
 
  /* 
  Hey i am beforebegin
@@ -74,7 +74,7 @@ Hey i am beforeend
  
  */
 
-newHtml = "<h1> Hey i am afterend  </h1>";
+newHtml ="<h1>Hey i am afterend</h1>"
 target.insertAdjacentHTML("afterend" , newHtml);
 /* 
  Hey i am beforebegin
