--- a/Tech-gun/JsDay9/CssClasses.html
+++ b/Tech-gun/JsDay9/CssClasses.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Css - Classes</title>
+    <title>Css - Classes obj.className</title>
     <style>
       .parameter {
         width: 30vh;
