--- a/Tech-gun/JsDay9/className.html
+++ b/Tech-gun/JsDay9/className.html
@@ -29,7 +29,7 @@
 
     <script>
       let btn = document.getElementById("btn");
-      // get class values usin className =>
+      // get class values using className =>
       let value = btn.className;
       console.log(value); // output : parameter property
 
