--- a/Tech-gun/jsDay10/EventCaptuing.html
+++ b/Tech-gun/jsDay10/EventCaptuing.html
@@ -10,6 +10,8 @@
             padding: 5px;
             border: 2px solid red;
             background: aqua;
+            display: flex;
+            margin: auto;
         }
         div{
              padding: 70px;
