--- a/Tech-gun/jsDay10/screenObject.html
+++ b/Tech-gun/jsDay10/screenObject.html
@@ -13,7 +13,7 @@
     // width or height return the size of device screen 
     console.log(screen.height); // output :720
     console.log(screen.width);  // output : 1280
-    console.log(screen.colorDepth);  // output : 24 . restrun the bit of color depth of color plate
+    console.log(screen.colorDepth);  // output : 24 . :its bit value. 24 diifrent color is our computer screen will show. 
 
 </script>
 </html>
