--- a/Tech-gun/JsDay8/insertBefore.html
+++ b/Tech-gun/JsDay8/insertBefore.html
@@ -10,6 +10,7 @@
     <ul >
      <li>list1</li>
      <li>list2</li>
+     <!-- add new list 3 here -->
      <li>list4</li>
      <li>list5</li>
      <li>list6</li>
