--- a/Tech-gun/JsDay9/classList.html
+++ b/Tech-gun/JsDay9/classList.html
@@ -70,7 +70,7 @@
     
     console.log(classList.contains("properties1")); // output : true
 
-    //4 toggle() => if given class available then reomve that class if not then add
+    //4 toggle() => if given class available then remove that class if not then add
     classList.toggle("properties1"); 
   console.log(classList);  // output : ['color', 'length']
 
