--- a/Tech-gun/JsDay9/getComputedCss.html
+++ b/Tech-gun/JsDay9/getComputedCss.html
@@ -20,6 +20,7 @@
   let value =  getComputedStyle(btn);
   // value has all css available in button included by browser as well.
    console.log(value.color); // output : rgb(0, 255, 255)   [with dot notaion checking one css property ]
+   console.log(value); // output : rgb(0, 255, 255)   [with dot notaion checking one css property ]
 </script>
 </body>
 
