--- a/freecodeCamp_15/OurMenu/index.html
+++ b/freecodeCamp_15/OurMenu/index.html
@@ -21,6 +21,14 @@
         <div class="underline"></div>
       </div>
       <!-- filter button -->
+   <div class="btn-container">
+    // we using all those buttons dynamiclly
+    <!-- <button class="filter-btn" type="button" data-id="all">All</button>
+    <button class="filter-btn" type="button"data-id ="breakfast">Breakfast</button>
+    <button class="filter-btn" type="button"data-id ="lunch">Lunch</button>
+    <button class="filter-btn" type="button"data-id="shakes">Shake</button> -->
+   </div>
+
       <!-- menu item-->
       <div class="section-center">
          <!-- single item -->
