--- a/Css -PRACTICE/01-css-practice/index.html
+++ b/Css -PRACTICE/01-css-practice/index.html
@@ -37,7 +37,7 @@
       height: 15%;
     }
     .header--logo {
-      border: 1px dotted rgb(155, 7, 7);
+      /* border: 2px dotted rgb(155, 7, 7); */
       width: 40px;
       height: 35px;
       border-radius: 50%;
@@ -45,8 +45,9 @@
     }
     .header--title {
       position: absolute;
-      top: 30px;
-     font-size: 20px;
+      top: 33px;
+      /* right: 1px; */
+     font-size: 19px;
     }
     /* nav itam  */
     .mid {
@@ -59,7 +60,7 @@
     ul li{
         display: inline-block;
        list-style: none;
-       font-size: 25px;
+       font-size: 23px;
         margin:0 20px;
     }
     li>a{
@@ -94,7 +95,7 @@
    top:2px;
    background: none;
    border: none;
-   font-size: 26px;
+   font-size: 27px;
    color: rgb(255, 255, 255);
 }
 .twitter{
@@ -115,9 +116,9 @@
     width: 35vw;
     height: 65vh;
     /* background-color: #220935; */
-    border: 2px solid #421366;
+    border: 1.2px solid #a546ed;
     border-radius: 10px;
-    margin: 20px;
+    margin:60px 25px;
     opacity: 50px;
     font-size: 22px;
         box-shadow: 1px 1px 0px #a546ed,
@@ -164,6 +165,8 @@
     border: none;
     border-radius: 15px;
     background-color: #a546ed;
+    opacity: 90%;
+    font-weight: 700;
      box-shadow: 1px 1px 0px #180824,
                 2px 2px 0px #180824,
                 3px 3px 0px#180824,
@@ -207,25 +210,25 @@
         <h2>Hey register us for latest episode</h2>
       <form action="noaction.php">
              <div class="form-info">
-                <input type="text" placeholder="Enter name">
+                <input type="text" placeholder="Enter Email">
              </div>
       <form action="noaction.php">
              <div class="form-info">
-                <input type="text" placeholder="Enter name">
+                <input type="text" placeholder="Enter Password">
              </div>
       <form action="noaction.php">
              <div class="form-info">
-                <input type="text" placeholder="Enter name">
+                <input type="text" placeholder="Enter Confirm Password">
              </div>
       <form action="noaction.php">
              <div class="form-info">
-                <input type="text" placeholder="Enter name">
+                <input type="text" placeholder="Enter User Name">
              </div>
       <form action="noaction.php">
              <div class="form-info">
-                <input type="text" placeholder="Enter name">
+                <input type="text" placeholder="Enter Phone">
              </div>
-    <button class="btn">Submit</button>
+    <button class="btn">Register</button>
       </form>
     </main>
   </body>
