--- a/Tech-gun/BOM/Bom.html
+++ b/Tech-gun/BOM/Bom.html
@@ -20,7 +20,7 @@
       console.log(window.x);   // output : " hello world !"
  
     
-   //2 : global function => autmaticlly becomes method of window object.
+   //2 : global function => automaticlly becomes method of window object.
     
    function golbal(){
     window.document.write("<h1>Hello World !</h1>"); 
