--- a/Tech-gun/JsDay1/index.html
+++ b/Tech-gun/JsDay1/index.html
@@ -17,5 +17,5 @@
    <script src="/JS/asnyc.js"></script>     
 </body>
 </html>
-  <!-- Defer => once html complete parsing then js code exicute but at the time of parsing html it downloads script simutaneously . -->
+  <!-- Defer => once html complete parsing then js code exicute but at the time of parsing html it downloads script simultaneously . -->
 <!-- Async => Start parsing Html and same time loads script and if loads then exicutes otherwise parsing continue until script not loaded -->
