--- a/Tech-gun/JsDay8/TraversingInElemnts.HTML
+++ b/Tech-gun/JsDay8/TraversingInElemnts.HTML
@@ -27,7 +27,7 @@ let beta = document.getElementById("ID_01");
 console.log(beta); // output =>    <li id="ID_01">This is a child 2</li>
 
 
-let baap = beta.parentElement;
+let baap = beta.parentElement; // paraent element of list2 is ul
 console.log(baap);
 /*
 // <ul> is paraent element of list2
