--- a/Tech-gun/JsDay8/querySelctor.html
+++ b/Tech-gun/JsDay8/querySelctor.html
@@ -21,7 +21,7 @@
 
 
 
-    // query selectorAll : seelcts the collection only.
+    // query selectorAll : selects the collection only.
     elm = document.querySelectorAll(".query p");
     console.log(elm.length); // OUTPUT : 3
     for (let i = 0; i < elm.length; i++) {
